--- a/liste.html
+++ b/liste.html
@@ -1,12 +1,11 @@
-<li class="liens"><a href="qui-sommes-nous.html" class="">Actualités</a></li>
-<li class="liens"><a href="qui-sommes-nous.html" class="">Actualités</a></li>
-<li class="liens"><a href="qui-sommes-nous.html" class="">Actualités</a></li>
-<li class="liens"><a href="qui-sommes-nous.html" class="">Actualités</a></li>
-<li class="liens"><a href="qui-sommes-nous.html" class="">Actualités</a></li>
-<li class="liens"><a href="qui-sommes-nous.html" class="">Actualités</a></li>
-<li class="liens"><a href="qui-sommes-nous.html" class="">Actualités</a></li>
-<li class="liens">Whale</li>
-<li class="liens">Aligator</li>
-<li class="liens">Donkey</li>
-<li class="liens">Horse</li>
-            
+<li class="liens"><a href="actualites.html" class="">Actualités</a></li>
+<li class="liens"><a href="accueil.html" class="">Accueil</a></li>
+<li class="liens"><a href="sciencesettechnologie.html" class="">Sciences & Technologie</a></li>
+<li class="liens"><a href="mathematiquesetlitterature.html" class="">Mathématiques & Littérature</a></li>
+<li class="liens"><a href="messages.html" class="">Messages</a></li>
+<li class="liens"><a href="sortiesvoyages.html" class="">Sorties et voyages</a></li>
+<li class="liens"><a href="activites.html" class="">Activités</a></li>
+<li class="liens"><a href="contacts.html" class="">Contacts & Situation géographique</a></li>
+<li class="liens"><a href="personnel.html" class="">Personnel</a></li> 
+<li class="liens"><a href="orientation.html" class="">Orientation</a></li>
+<li class="liens"><a href="arts.html" class="">Arts</a></li>          
