--- a/liste.html
+++ b/liste.html
@@ -1,3 +1,4 @@
+<ol id="list">
 <li class="liens"><a href="actualites.html" class="">Actualités</a></li>
 <li class="liens"><a href="accueil.html" class="">Accueil</a></li>
 <li class="liens"><a href="sciencesettechnologie.html" class="">Sciences & Technologie</a></li>
@@ -8,4 +9,5 @@
 <li class="liens"><a href="contacts.html" class="">Contacts & Situation géographique</a></li>
 <li class="liens"><a href="personnel.html" class="">Personnel</a></li> 
 <li class="liens"><a href="orientation.html" class="">Orientation</a></li>
-<li class="liens"><a href="arts.html" class="">Arts</a></li>          
+<li class="liens"><a href="arts.html" class="">Arts</a></li>   
+</ol>  
