--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="rechercher" id="rechercher">
             <a><img class="rechercher" src="img/rechercher.png" alt=""></a>
             <input id="searchbar" onkeyup="search_lien()" type="text"name="search" placeholder="Rechercher" change="">
+            <ol id="list"></ol>
                 <script>
                     $(function(){
                     $("#list").load("./liste.html"); 
