--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1>Collège Michelet Lens</h1>
             <div class="button"><a href="#">Découvrir -></a></div>
         </div>
-        <div class="container container-1">
+        <div class="container">
 			<a href="actualites.html" class=""><div class="box vf"><img src="img/actualites.png" alt="">Actualités</div></a>
 			<a href="activites.html" class=""><div class="box vc"><img src="img/activites.png" alt="">Activités</div></a>
 			<a href="sortiesvoyages.html" class=""><div class="box vf"><img src="img/voyages.png" alt="">Sorties & Voyages</div></a>
