--- a/sciencesettechnologie.html
+++ b/sciencesettechnologie.html
@@ -33,31 +33,28 @@
     </header>
     <main class="main">
         <div class="contener_slideshow">
-            <h1 class="titre">Actualités</h1>
+            <h1 class="titre">Sciences et Technologie</h1>
             <div class="contener_slide">
-            <div class="slid_1"><img src="img/fresque.png"></div>
-            <div class="slid_2"><img src="img/podium.png"></div>
-            <div class="slid_3"><img src="img/tournoiechec.png"></div>
+            <div class="slid_1"><img src="img/banniere_st_1.png"></div>
+            <div class="slid_2"><img src="img/banniere_st_2.png"></div>
+            <div class="slid_3"><img src="img/banniere_st_3.png"></div>
             </div>
         </div>
         <div class="container">
-            <a href="actualites.html"><div class="box actualite">
-                <h2>"Michelet a un incroyable talent", une fresque pour le centenaire du collège !</h2>
-                <p class="date">31 mars 2022</p>
-                <p class="resume">Les élèves des « cordées de la réussite » ont travaillé à l’élaboration et la réalisation d’une fresque à l’occasion du centenaire de l’établissement avec l’artiste graffeur Bertrand dit « Parse ». Un grand coup de jeune pour le mur de la salle polyvalente qui voit désormais ...</p>
-                <img src="img/fresque.png" alt="">
+            <a href="actualites.html"><div class="box vc n3">
+                <img src="img/technologie.png" alt="">
+                <h2>Technologie</h2>
+                <p class="resume">La technologie est une des matières les plus importantes au collège...</p>
             </div></a>
-            <a href="actualites.html"><div class="box actualite">
-                <h2>Polar Lens</h2>
-                <p class="date">31 mars 2022</p>
-                <p class="resume">Durant le deuxième trimestre les élèves de quatrième ont préparé le salon Polar Lens. A cette occasion ils ont pu rencontrer le célèbre ancien espion et auteur Olivier Maes, puis se glisser dans la peau de faussaires au cœur d’un trafic de répliques du célèbre scribe accroupi arrivé au Louvre Lens sous ...</p>
-                <img src="img/polarlens.png" alt="">
+            <a href="actualites.html"><div class="box vf n3">
+                <img src="img/svt.png" alt="">
+                <h2>Science de la Vie et de la Terre</h2>
+                <p class="resume">La SVT est une des matières les plus importantes au collège...</p>
             </div></a>
-            <a href="actualites.html"><div class="box actualite">
-                <h2>Tournoi régional d'échec</h2>
-                <p class="date">21 mars 2022</p>
-                <p class="resume">Après leur belle qualification départementale en janvier dernier, les 10 élèves représentant le collège Michelet se sont rendus mercredi 16 mars après-midi au tournoi régional, qui opposait 10 collèges du Nord Pas-de-Calais. Le niveau de la compétition était à la hauteur de l’enjeu, à savoir une qualification ...</p>
-                <img src="img/tournoiechec.png" alt="">
+            <a href="actualites.html"><div class="box vc n3">
+                <img src="img/physiqye.png" alt="">
+                <h2>Physique-Chimie</h2>
+                <p class="resume">La physique-chimie est une des matières les plus importantes au collège...</p>
             </div></a>
         </div>
 
