--- a/professeurs_svt.html
+++ b/professeurs_svt.html
@@ -33,7 +33,7 @@
     </header>
     <main class="main">
         <div class="contener_slideshow">
-            <h1 class="titre">Sciences et Technologie</h1>
+            <h1 class="titre">SVT - Professeurs</h1>
             <div class="contener_slide">
             <div class="slid_1"><img src="img/banniere_st_1.png"></div>
             <div class="slid_2"><img src="img/banniere_st_2.png"></div>
@@ -41,23 +41,26 @@
             </div>
         </div>
         <div class="container">
-            <a href="technologie.html"><div class="box vc n3">
-                <img src="img/technologie.png" alt="">
-                <h2>Technologie</h2>
-                <p class="resume">La technologie est une des matières les plus importantes au collège...</p>
-            </div></a>
-            <a href="svt.html"><div class="box vf n3">
-                <img src="img/svt.png" alt="">
-                <h2>Science de la Vie et de la Terre</h2>
-                <p class="resume">La SVT est une des matières les plus importantes au collège...</p>
-            </div></a>
-            <a href="physique.html"><div class="box vc n3">
-                <img src="img/physiqye.png" alt="">
-                <h2>Physique-Chimie</h2>
-                <p class="resume">La physique-chimie est une des matières les plus importantes au collège...</p>
-            </div></a>
-        </div>
 
+          <div class="article">
+            <img class="img gauche" src="img/personnel.png" alt="">
+			<div class="text gauche"><h1>Présentation de Mme POREE</h1>
+		    <p>Madame Porée est professeur de SVT au collège Michelet à LENS. Elle exerce son métier avec passion depuis quelques années.</p>
+            <p>Elle est professeur principal de la classe : ??</p>
+            <p>Elle est professeur des classes : 6A 6B 6C 6D 6E 6F, 4A 4B 4C 4D 4E 4F, 3A 3D</p>
+          </div>
+          </div>
+
+          <div class="article">
+            <img class="img droite" src="img/personnel.png" alt="">
+			<div class="text gauche"><h1>Présentation de M. HUCHELOUP</h1>
+		    <p>Monsieur Hucheloup est professeur de SVT au collège Michelet à LENS. Il exerce son métier avec passion depuis quelques années.</p>
+            <p>Il est professeur principal de la classe : ??</p>
+            <p>Il est professeur des classes : 5A 5B 5C 5D 5E 5F, 3B 3C 3E</p>
+          </div>
+          </div>
+
+		</div>
 
     </main>
     <footer class="footer">
