--- a/programme_svt.html
+++ b/programme_svt.html
@@ -33,7 +33,7 @@
     </header>
     <main class="main">
         <div class="contener_slideshow">
-            <h1 class="titre">Sciences et Technologie</h1>
+            <h1 class="titre">SVT - Programme</h1>
             <div class="contener_slide">
             <div class="slid_1"><img src="img/banniere_st_1.png"></div>
             <div class="slid_2"><img src="img/banniere_st_2.png"></div>
@@ -41,23 +41,28 @@
             </div>
         </div>
         <div class="container">
-            <a href="technologie.html"><div class="box vc n3">
-                <img src="img/technologie.png" alt="">
-                <h2>Technologie</h2>
-                <p class="resume">La technologie est une des matières les plus importantes au collège...</p>
-            </div></a>
-            <a href="svt.html"><div class="box vf n3">
-                <img src="img/svt.png" alt="">
-                <h2>Science de la Vie et de la Terre</h2>
-                <p class="resume">La SVT est une des matières les plus importantes au collège...</p>
-            </div></a>
-            <a href="physique.html"><div class="box vc n3">
-                <img src="img/physiqye.png" alt="">
-                <h2>Physique-Chimie</h2>
-                <p class="resume">La physique-chimie est une des matières les plus importantes au collège...</p>
-            </div></a>
+          <div class="article">
+            <img class="img droite" src="img/programme.png" alt="">
+			<div class="text gauche"><h1>Programme de SVT</h1>
+		    <p>En classe de troisième, et dans la continuité du programme de quatrième, le programme de sciences de la vie et de la Terre s’articule autour de trois grandes thématiques :</p>
+            <p>
+                <li>La planète Terre, l’environnement et l’action humaine ;</li>
+                <li>Le vivant et son évolution ;</li>
+                <li>Le corps humain et la santé. </li>
+            </p>
+            <p>Comme dans l’ensemble de ce cycle scolaire, 7 compétences sont travaillées :</p>
+            <p>
+                <li>pratiquer des démarches scientifiques ;</li>
+                <li>concevoir, créer, réaliser ;</li>
+                <li>utiliser des outils et mobiliser des méthodes pour apprendre ;</li>
+                <li>pratiquer des langages ;</li>
+                <li>mobiliser des outils numériques ;</li>
+                <li>adopter un comportement éthique et responsable ;</li>
+                <li>se situer dans l’espace et dans le temps.</li>
+            </p>
         </div>
-
+        </div>
+		</div>
 
     </main>
     <footer class="footer">
