--- a/programme_technologie.html
+++ b/programme_technologie.html
@@ -33,7 +33,7 @@
     </header>
     <main class="main">
         <div class="contener_slideshow">
-            <h1 class="titre">Sciences et Technologie</h1>
+            <h1 class="titre">Technologie - Programme</h1>
             <div class="contener_slide">
             <div class="slid_1"><img src="img/banniere_st_1.png"></div>
             <div class="slid_2"><img src="img/banniere_st_2.png"></div>
@@ -41,23 +41,26 @@
             </div>
         </div>
         <div class="container">
-            <a href="technologie.html"><div class="box vc n3">
-                <img src="img/technologie.png" alt="">
-                <h2>Technologie</h2>
-                <p class="resume">La technologie est une des matières les plus importantes au collège...</p>
-            </div></a>
-            <a href="svt.html"><div class="box vf n3">
-                <img src="img/svt.png" alt="">
-                <h2>Science de la Vie et de la Terre</h2>
-                <p class="resume">La SVT est une des matières les plus importantes au collège...</p>
-            </div></a>
-            <a href="physique.html"><div class="box vc n3">
-                <img src="img/physiqye.png" alt="">
-                <h2>Physique-Chimie</h2>
-                <p class="resume">La physique-chimie est une des matières les plus importantes au collège...</p>
-            </div></a>
+          <div class="article">
+            <img class="img droite" src="img/programme.png" alt="">
+			<div class="text gauche"><h1>Programme de Technologie</h1>
+		    <p>En technologie, le programme de collège vise l’acquisition de méthodes pour construire la pensée algorithmique, représenter et traiter l’information, résoudre des problèmes, contrôler des résultats et mener à bien des projets de manière active et collaborative.</p>
+            <p>7 compétences sont travaillées : </p>
+            <p>
+                <li>pratiquer des démarches scientifiques ;</li>
+                <li>concevoir, créer, réaliser ;</li>
+                <li>s’approprier des outils et des méthodes ; </li>
+                <li>pratiquer des langages ;</li>
+                <li>mobiliser des outils numériques ;</li>
+                <li>adopter un comportement éthique et responsable ;</li>
+                <li>se situer dans l’espace et dans le temps.</li>
+            </p>
+            <p>Le programme s’articule en trois grandes parties : « Le design, l’innovation, la créativité », « Les objets techniques, les services et les changements induits dans la société » et « La modélisation et la simulation des objets techniques ».</p>
+            <p>Ces thèmes ont vocation à être traités tout au long du collège car ils sont indissociables. </p>
+            <p>Des liens sont réalisés avec les autres enseignements scientifiques (mathématiques, sciences de la vie et de la Terre et physique-chimie).</p>
         </div>
-
+        </div>
+		</div>
 
     </main>
     <footer class="footer">
