--- a/programme_physique.html
+++ b/programme_physique.html
@@ -33,7 +33,7 @@
     </header>
     <main class="main">
         <div class="contener_slideshow">
-            <h1 class="titre">Sciences et Technologie</h1>
+            <h1 class="titre">Physique-Chimie - Programme</h1>
             <div class="contener_slide">
             <div class="slid_1"><img src="img/banniere_st_1.png"></div>
             <div class="slid_2"><img src="img/banniere_st_2.png"></div>
@@ -41,23 +41,23 @@
             </div>
         </div>
         <div class="container">
-            <a href="technologie.html"><div class="box vc n3">
-                <img src="img/technologie.png" alt="">
-                <h2>Technologie</h2>
-                <p class="resume">La technologie est une des matières les plus importantes au collège...</p>
-            </div></a>
-            <a href="svt.html"><div class="box vf n3">
-                <img src="img/svt.png" alt="">
-                <h2>Science de la Vie et de la Terre</h2>
-                <p class="resume">La SVT est une des matières les plus importantes au collège...</p>
-            </div></a>
-            <a href="physique.html"><div class="box vc n3">
-                <img src="img/physiqye.png" alt="">
-                <h2>Physique-Chimie</h2>
-                <p class="resume">La physique-chimie est une des matières les plus importantes au collège...</p>
-            </div></a>
+          <div class="article">
+            <img class="img droite" src="img/programme.png" alt="">
+			<div class="text gauche"><h1>Programme de Physique-Chimie</h1>
+		    <p>Après une première approche de ces matières par le biais de l’enseignement de Sciences et technologie, les élèves découvrent explicitement la physique et la chimie en cinquième. Obligatoire jusqu’en seconde, l’enseignement de physique-chimie devient, en Première, un enseignement de spécialité que les élèves choisissent ou non de suivre.</p>
+            <p>Cet enseignement propose d’explorer le réel, de l’infiniment petit à l’infiniment grand et vise à favoriser la pratique expérimentale et l’activité de modélisation.</p>
+            <p>Comme dans l’ensemble de ce cycle scolaire, 7 compétences sont travaillées :</p>
+            <p>Au lycée comme au collège, l’enseignement de physique-chimie s’organise autour de quatre thèmes :</p>
+            <p>
+                <li>Organisation et transformations de la matière</li>
+                <li>Mouvements et interactions</li>
+                <li>Conversions et transferts d’énergie </li>
+                <li>Ondes et signaux</li>
+            </p>
+            <p>Ces thèmes forment l’ossature d’une lecture scientifique du monde naturel, ils participent de la culture scientifique et technique, ils permettent d’appréhender la grande variété et l’évolution des métiers et des formations ainsi que les enjeux économiques en relation avec la physique et la chimie.</p>
         </div>
-
+        </div>
+		</div>
 
     </main>
     <footer class="footer">
