--- a/salle_physique.html
+++ b/salle_physique.html
@@ -33,7 +33,7 @@
     </header>
     <main class="main">
         <div class="contener_slideshow">
-            <h1 class="titre">Sciences et Technologie</h1>
+            <h1 class="titre">Physique-Chimie - Salles</h1>
             <div class="contener_slide">
             <div class="slid_1"><img src="img/banniere_st_1.png"></div>
             <div class="slid_2"><img src="img/banniere_st_2.png"></div>
@@ -41,23 +41,17 @@
             </div>
         </div>
         <div class="container">
-            <a href="technologie.html"><div class="box vc n3">
-                <img src="img/technologie.png" alt="">
-                <h2>Technologie</h2>
-                <p class="resume">La technologie est une des matières les plus importantes au collège...</p>
-            </div></a>
-            <a href="svt.html"><div class="box vf n3">
-                <img src="img/svt.png" alt="">
-                <h2>Science de la Vie et de la Terre</h2>
-                <p class="resume">La SVT est une des matières les plus importantes au collège...</p>
-            </div></a>
-            <a href="physique.html"><div class="box vc n3">
-                <img src="img/physiqye.png" alt="">
-                <h2>Physique-Chimie</h2>
-                <p class="resume">La physique-chimie est une des matières les plus importantes au collège...</p>
-            </div></a>
-        </div>
-
+          <div class="article">
+			<div class="text gauche"><h1>Salle de Physique-Chimie de monsieur LESAGE : B110</h1>
+            <img class="" src="img/salle.png" alt="">
+          </div>
+          </div>
+          <div class="article">
+			<div class="text gauche"><h1>Salle de Physique-Chimie de monsieur PETIT : B110</h1>
+            <img class="" src="img/salle.png" alt="">
+          </div>
+          </div>
+		</div>
 
     </main>
     <footer class="footer">
