--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="banniere">
             <div class="bg"></div>
             <h1>Collège Michelet Lens</h1>
-            <div class="button"><a href="#">Découvrir -></a></div>
+            <div class="button"><a href="decouvrir.html">Découvrir -></a></div>
         </div>
         <div class="container">
 			<a href="actualites.html" class=""><div class="box vf"><img src="img/actualites.png" alt="">Actualités</div></a>
