--- a/programme_technologie .html
+++ b/programme_technologie .html
@@ -27,13 +27,13 @@
         </div>
         <nav>
             <a href="index.html" class="">Accueil</a>
-            <a href="actualites.html" class="">Actualités</a>
+            <a href="actualites.html" class="active">Actualités</a>
             <a href="login.html">Se connecter</a>
         </nav>
     </header>
     <main class="main">
         <div class="contener_slideshow">
-            <h1 class="titre">Technologie - Salle</h1>
+            <h1 class="titre">Sciences et Technologie</h1>
             <div class="contener_slide">
             <div class="slid_1"><img src="img/banniere_st_1.png"></div>
             <div class="slid_2"><img src="img/banniere_st_2.png"></div>
@@ -41,22 +41,25 @@
             </div>
         </div>
         <div class="container">
-          <div class="article">
-			<div class="text gauche"><h1>Salle de technologie : B113</h1>
-			<a href="salledetechno.sh3d">sallle de techno</a>
-            <img class="" src="" alt="">
-			<video controls>
-                <source src="videos/salletechno.mp4" type="video/mp4">
-                <source src="videos/salletechno.webm" type="video/webm">
-                <p>Votre navigateur ne prend pas en charge les vidéos HTML5.
-                   Voici <a href="videos/salletechno.mp4">un lien pour télécharger la vidéo</a>.</p>
-              </video>
-
+            <a href="professeur_technologie.html"><div class="box vc n3">
+                <img src="img/technologie.png" alt="">
+                <h2>Professeur</h2>
+                <p class="resume">Présentation du professeur de technologie...</p>
+            </div></a>
+            <a href="programme_technologie.html"><div class="box vf n3">
+                <img src="img/svt.png" alt="">
+                <h2>Programme</h2>
+                <p class="resume">Le programme en technologie...</p>
+            </div></a>
+            <a href="salle_technologie.html"><div class="box vc n3">
+                <img src="img/physiqye.png" alt="">
+                <h2>Salle</h2>
+                <p class="resume">Présentation de la salle de Technologie</p>
+            </div></a>
         </div>
-        </div>
-		</div>
 
-    </main>
+
+    </main>s
     <footer class="footer">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#85b439" fill-opacity="1" d="M0,128L21.8,128C43.6,128,87,128,131,138.7C174.5,149,218,171,262,170.7C305.5,171,349,149,393,133.3C436.4,117,480,107,524,90.7C567.3,75,611,53,655,58.7C698.2,64,742,96,785,101.3C829.1,107,873,85,916,69.3C960,53,1004,43,1047,53.3C1090.9,64,1135,96,1178,133.3C1221.8,171,1265,213,1309,218.7C1352.7,224,1396,192,1418,176L1440,160L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z"></path>
