--- a/contacts.html
+++ b/contacts.html
@@ -35,9 +35,9 @@
         <div class="contener_slideshow">
             <h1 class="titre">Contacts & Informations</h1>
             <div class="contener_slide">
-            <div class="slid_1"><img src="img/banniere_st_1.png"></div>
-            <div class="slid_2"><img src="img/banniere_st_2.png"></div>
-            <div class="slid_3"><img src="img/banniere_st_3.png"></div>
+                <div class="slid_1"><img src="img/college.png"></div>
+                <div class="slid_2"><img src="img/michelet.jpg"></div>
+                <div class="slid_3"><img src="img/michelet.png"></div>
             </div>
         </div>
         <div class="container">
