--- a/mathematiquesetlitterature.html
+++ b/mathematiquesetlitterature.html
@@ -42,12 +42,12 @@
         </div>
         <div class="container">
             <a href="actualites.html"><div class="box vc n2">
-                <img src="img/technologie.png" alt="">
+                <img src="img/maths.png" alt="">
                 <h2>Mathématiques</h2>
                 <p class="resume">Mathématiques est une des matières les plus importantes au collège...</p>
             </div></a>
             <a href="actualites.html"><div class="box vf n2">
-                <img src="img/svt.png" alt="">
+                <img src="img/francais.png" alt="">
                 <h2>Français</h2>
                 <p class="resume">Le Français est une des matières les plus importantes au collège...</p>
             </div></a>
