--- a/physique.html
+++ b/physique.html
@@ -46,7 +46,7 @@
                 <h2>Professeurs</h2>
                 <p class="resume">Présentation des professeurs de physique...</p>
             </div></a>
-            <a href="programme_physique.html"><div class="box vf n3">
+            <a href="programme_physique_classe.html"><div class="box vf n3">
                 <img src="img/programme.png" alt="">
                 <h2>Programme</h2>
                 <p class="resume">Le programme en physique chimie...</p>
