--- a/technologie.html
+++ b/technologie.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -46,7 +46,7 @@
                 <h2>Professeur</h2>
                 <p class="resume">Présentation du professeur de technologie...</p>
             </div></a>
-            <a href="programme_technologie.html"><div class="box vf n3">
+            <a href="programme_technologie_classe.html"><div class="box vf n3">
                 <img src="img/programme.png" alt="">
                 <h2>Programme</h2>
                 <p class="resume">Le programme en technologie...</p>
